# rag-with-streamlit

./: .gitignore  Dockerfile  README.md  docker-compose.yml  new_rag_pipeline.ipynb  pyproject.toml  requirements.txt
app/: main.py  rag_pipeline.py  streamlit_ui.py
chroma/: chroma.sqlite3
