[project]
name = "rag-with-streamlit"
version = "0.1.0"
description = "Simple RAG System"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "chroma_db>=1.0.15",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0",
    "langchain-groq>=0.3.5",
    "langchain-huggingface>=0.3.0",
    "langchain-text-splitters>=0.3.8",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
    "unstructured>=0.18.3",
]

[project.urls]
Homepage = ""
Repository = "https://github.com/mar-vyn23/rag-with-streamlit.git"